# Financial-Data-Hub

./: .dockerignore  .editorconfig  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: pr.yml  release.yml  staging.yml
apps/api/: main.py
apps/web/: package-lock.json  package.json
db/: alembic.ini
db/migrations/: env.py
db/seeds/: canonical_fields.sql  field_aliases.sql  source_configs.sql
docs/: DATA ACQUSITION ARCHITECTURE.docx  Database Design.docx  Development Phases.docx  Engineering_Specification_Part_1.docx  Engineering_Specification_Part_2.docx  Engineering_Specification_Part_3.docx  M1_Closure_Report.docx  M2_Closure_Report.docx  M2_Execution_Plan.docx  M3_Execution_Plan.docx  PROJECT REQUIREMENTS.docx  PROJECT_REQUIREMENTS.md  Phase_1_Implementation_Guide.docx  Technical Stack Specification.docx
infra/: Dockerfile.api
infra/nginx/: nginx.conf
scripts/: e2e_auth.py  e2e_password_reset.py  m1_validate.ps1
services/currency/: aggregation_view.py  bulk_processor.py  translator.py
services/export/: builder.py  excel_generator.py  transformer.py
services/extraction/: chunker.py  extractor.py
services/ingestion/: classifier.py  section_detector.py  writer.py
services/validation/: confidence_scorer.py  conflict_resolver.py  engine.py
tests/: conftest.py
tests/integration/: conftest.py  test_acquisition_api_integration.py  test_acquisition_jobs_integration.py  test_auth_forgot_password.py  test_auth_login.py  test_auth_logout.py  test_auth_refresh.py  test_auth_register.py  test_auth_reset_password.py  test_companies_router.py  test_company_resolver_integration.py  test_document_fetcher_integration.py  test_filings_integration.py  test_invitations.py  test_jobs_s3.py  test_m39_validation.py  test_repositories_m2.py  test_sec_edgar_integration.py  test_sources_integration.py  test_storage_pipeline_integration.py  test_td1_blocklist.py
tests/unit/: test_acquisition_job_repository.py  test_acquisition_job_service.py  test_acquisition_router.py  test_audit_middleware.py  test_auth_forgot_password.py  test_auth_login.py  test_auth_logout.py  test_auth_middleware.py  test_auth_refresh.py  test_auth_register.py  test_auth_reset_password.py  test_companies_router.py  test_company_resolver_provider.py  test_company_resolver_router.py  test_company_resolver_service.py  test_document_fetcher.py  (+20 more)
workers/: celery_app.py  queues.py
(+183 files in other folders)
