[project]
name = "financial-data-hub-api"
version = "0.1.0"
description = "Financial Data Hub — API and background workers"
requires-python = ">=3.13"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    # Validation / settings
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pyotp>=2.9.0",
    # Task queue
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    # AWS
    "boto3>=1.34.0",
    # Excel engine
    "openpyxl>=3.1.0",
    "pandas>=2.2.0",
    # HTTP client
    "httpx>=0.27.0",
    # Email
    "jinja2>=3.1.0",
    "resend>=0.8.0",
    # Document processing (Phase 1 — XBRL primary)
    "pdfplumber>=0.11.0",
    "pymupdf>=1.24.0",
    # Logging / monitoring
    "structlog>=24.1.0",
    "sentry-sdk[fastapi]>=2.0.0",
    # Utilities
    "python-slugify>=8.0.0",
    "tenacity>=8.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-passlib",
    "types-python-slugify",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps/api", "services", "workers"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["apps/api", "services", "workers", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "ANN"]
ignore = [
    "ANN101",  # missing type annotation for self
    "ANN102",  # missing type annotation for cls
    "ANN401",  # dynamically typed expressions (Any)
    "B008",    # do not perform function call in argument defaults
               # FastAPI's Depends() is explicitly designed for this pattern
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "S"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["tests/", "db/migrations/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=apps/api --cov=services --cov-report=term-missing"
